# TLS-Chameleon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  probe_curl.py  probe_curl_init.py  probe_curl_top.py  pyproject.toml  requirements.txt  test_features.py  test_persistence_repro.py  test_realworld.py
examples/: advanced_fingerprinting.py  cloudflare_rotate.py  run_example.py
tests/: test_tls_chameleon.py
tls_chameleon/: __init__.py  async_client.py  client.py  fingerprint_gallery.py  fingerprint_updater.py  http2_simulator.py  magnet.py  profiles.py  randomizer.py
tls_chameleon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
