[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tls-chameleon"
version = "1.0.0"
description = "Anti-Fingerprinting HTTP client with easy TLS fingerprint spoofing"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Zinzied" }]
dependencies = [
  "httpx>=0.26.0",
]

[project.optional-dependencies]
curl = [
  "curl_cffi>=0.6.0",
]
ai = [
  "google-generativeai",
  "anthropic",
  "openai"
]

[tool.setuptools.packages.find]
include = ["tls_chameleon*"]
